fix(dropdowns): right aligned in navbar

--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -17,7 +17,7 @@
 .dropdown-menu {
   position: absolute;
   top: 100%;
-  left: 0 #{"/* rtl:ignore */"};
+  left: 0;
   z-index: $zindex-dropdown;
   display: none; // none by default, but block on "open" of the menu
   min-width: $dropdown-min-width;
